Create images/ directory

--- a/Bias-Variance Trade-off.ipynb
+++ b/Bias-Variance Trade-off.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,19 +14,12 @@
     "\n",
     "The standard deviation of the RMSE values can be a proxy for a model's **variance** while the average RMSE is a proxy for a model's **bias**. Bias and variance are the 2 observable sources of error in a model that we can indirectly control.\n",
     "\n",
-    "![bias_variance.png](bias_variance.png)\n",
+    "![bias_variance.png](images/bias_variance.png)\n",
     "\n",
     "While *k-nearest neighbors* can make predictions, it isn't a mathematical model. A mathematical model is usually an equation that can exist without the original data, which isn't true with k-nearest neighbors. In the next two courses, we'll learn about a mathematical model called linear regression. We'll explore the bias-variance tradeoff in greater depth in these next 2 courses because of its importance when working with mathematical models in particular.\n",
     "\n",
     "[Read more](http://scott.fortmann-roe.com/docs/BiasVariance.html)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
