convert svg images to png

--- a/Kaggle Fundamentals (Part 1)  - Getting Started with Kaggle.ipynb
+++ b/Kaggle Fundamentals (Part 1)  - Getting Started with Kaggle.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "The testing set contains all of the same feature columns, but is missing the target value column. Additionally, the testing set usually has fewer observations (rows) than the training set.\n",
     "\n",
-    "![](images/kaggle_overview.svg)\n",
+    "![](images/kaggle_overview.png)\n",
     "\n",
     "This is useful because we want as much data as we can to train our model on. Once we have trained our model on the training set, we will use that model to make predictions on the data from the testing set, and submit those predictions to Kaggle.\n",
     "\n",
@@ -214,7 +214,7 @@
     "\n",
     "The diagram below shows how the function converts the data:\n",
     "\n",
-    "![pandas.cut() diagram](images/cut.svg)\n",
+    "![pandas.cut() diagram](images/cut.png)\n",
     "\n",
     "Note that the `cut_points` list has one more element than the `label_names` list, since it needs to define the upper boundary for the last segment."
    ]
@@ -277,7 +277,7 @@
     "\n",
     "In order to remove this relationship, we can create dummy columns for each unique value in `Pclass`:\n",
     "\n",
-    "![Pclass Dummy Columns](images/kaggle_get_dummies.svg)\n",
+    "![Pclass Dummy Columns](images/kaggle_get_dummies.png)\n",
     "\n",
     "Rather than doing this manually, we can use the [`pandas.get_dummies()` function](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.get_dummies.html), which will generate columns shown in the diagram above.\n",
     "\n",
@@ -411,7 +411,7 @@
     "\n",
     "The scikit-learn library has a handy [`model_selection.train_test_split()` function](http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html) that we can use to split our data. `train_test_split()` accepts two parameters, `X` and `y`, which contain all the data we want to train and test on, and returns four objects: `train_X, train_y, test_X, test_y`:\n",
     "\n",
-    "![Train/Test Split](images/kaggle_train_test_split.svg)\n",
+    "![Train/Test Split](images/kaggle_train_test_split.png)\n",
     "\n",
     "Here's what the syntax for creating these four objects looks like:\n",
     "\n",
@@ -529,7 +529,7 @@
     "\n",
     "To give us a better understanding of the real performance of our model, we can use a technique called **cross validation** to train and test our model on different splits of our data, and then average the accuracy scores.\n",
     "\n",
-    "![Cross Validation](images/kaggle_cross_validation.svg)\n",
+    "![Cross Validation](images/kaggle_cross_validation.png)\n",
     "\n",
     "The most common form of cross validation, and the one we will be using, is called **k-fold cross validation**. 'Fold' refers to each different iteration that we train our model on, and 'k' just refers to the number of folds. In the diagram above, we have illustrated k-fold validation where k is 5.\n",
     "\n",
