--- a/Kaggle Fundamentals (Part 2) -  Feature Preparation, Selection and Engineering.ipynb
+++ b/Kaggle Fundamentals (Part 2) -  Feature Preparation, Selection and Engineering.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "The diagram below illustrates this. The red dots represent the data we are trying to predict, and each of the blue lines represents a different model.\n",
     "\n",
-    "![Overfitting](images/overfitting.svg)\n",
+    "![Overfitting](images/overfitting.png)\n",
     "\n",
     "The model on the left is **overfitting**, which means the model represents the training data too closely, and is unlikely to predict well on unseen data, like the holdout data for our Kaggle competition.\n",
     "\n",
@@ -151,7 +151,7 @@
     "\n",
     "Rescaling simply stretches or shrinks the data as needed to be on the same scale, in our case between 0 and 1.\n",
     "\n",
-    "![An example of rescaling](images/rescaling.svg)\n",
+    "![An example of rescaling](images/rescaling.png)\n",
     "\n",
     "In the diagram above, the three columns have different minimum and maximum values before rescaling.\n",
     "\n",
